--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Force Failure
         run: go test -cover ./...
 
-        name: Style
+      - name: Style
         run: test -z $(go fmt ./...)
