--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: staticcheck
-        run: $(go env GOPATH)/bin/staticcheck ./...
+        run: staticcheck ./...
 
   tests:
     name: Tests
@@ -46,5 +46,5 @@ jobs:
       - name: Install gosec
         run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
-      - name: rung gosec
+      - name: run gosec
         run: gosec ./...
