--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Run tests
+      - name: Run unit tests
         run: go test ./... -cover
 
       - name: Install gosec
@@ -40,7 +40,7 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Style
+      - name: Check formatting
         run: test -z $(go fmt ./...)
 
       - name: Install staticcheck
